# LibSense

./: README.md
src/doccrunch/: pyproject.toml
src/doccrunch/doccrunch/: __init__.py  document_processor.py  main.py  server.py
src/sensetool/: .gitignore  dub.sdl  dub.selections.json
src/sensetool/source/: app.d  config.d  docprocess.d  docread.d  embed.d  embedding.d  global.d  indexing.d  manager.d  models.d  searching.d  util.d
src/sensetool/source/util/: chunker.d  logger.d  minhttp.d  misc.d
